// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkText should not apply black styles when weight="black" and not an xl textStyle 1`] = `
<span
  className="bpk-text bpk-text--base"
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</span>
`;

exports[`BpkText should pass down unknown props 1`] = `
<span
  className="bpk-text bpk-text--base"
  style={
    Object {
      "color": "red",
    }
  }
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</span>
`;

exports[`BpkText should render correctly 1`] = `
<span
  className="bpk-text bpk-text--base"
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</span>
`;

exports[`BpkText should render correctly with deprecated \`bold\` prop 1`] = `
<span
  className="bpk-text bpk-text--base bpk-text--bold"
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</span>
`;

exports[`BpkText should render correctly with tageName="h1", textStyle="xxl" 1`] = `
<h1
  className="bpk-text bpk-text--xxl"
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</h1>
`;

exports[`BpkText should render correctly with tageName="text" 1`] = `
<text
  className="bpk-text bpk-text--base"
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</text>
`;

exports[`BpkText should render correctly with textStyle="base" 1`] = `
<span
  className="bpk-text bpk-text--base"
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</span>
`;

exports[`BpkText should render correctly with textStyle="lg" 1`] = `
<span
  className="bpk-text bpk-text--lg"
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</span>
`;

exports[`BpkText should render correctly with textStyle="sm" 1`] = `
<span
  className="bpk-text bpk-text--sm"
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</span>
`;

exports[`BpkText should render correctly with textStyle="xl" 1`] = `
<span
  className="bpk-text bpk-text--xl"
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</span>
`;

exports[`BpkText should render correctly with textStyle="xs" 1`] = `
<span
  className="bpk-text bpk-text--xs"
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</span>
`;

exports[`BpkText should render correctly with textStyle="xxl" 1`] = `
<span
  className="bpk-text bpk-text--xxl"
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</span>
`;

exports[`BpkText should render correctly with textStyle="xxxl" 1`] = `
<span
  className="bpk-text bpk-text--xxxl"
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</span>
`;

exports[`BpkText should render correctly with textStyle="xxxxl" 1`] = `
<span
  className="bpk-text bpk-text--xxxxl"
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</span>
`;

exports[`BpkText should render correctly with textStyle="xxxxxl" 1`] = `
<span
  className="bpk-text bpk-text--xxxxxl"
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</span>
`;

exports[`BpkText should render correctly with weight="black" and supported textStyle="xl" 1`] = `
<span
  className="bpk-text bpk-text--xl bpk-text--black"
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</span>
`;

exports[`BpkText should render correctly with weight="black" and supported textStyle="xxl" 1`] = `
<span
  className="bpk-text bpk-text--xxl bpk-text--black"
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</span>
`;

exports[`BpkText should render correctly with weight="black" and supported textStyle="xxxl" 1`] = `
<span
  className="bpk-text bpk-text--xxxl bpk-text--black"
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</span>
`;

exports[`BpkText should render correctly with weight="black" and supported textStyle="xxxxl" 1`] = `
<span
  className="bpk-text bpk-text--xxxxl bpk-text--black"
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</span>
`;

exports[`BpkText should render correctly with weight="black" and supported textStyle="xxxxxl" 1`] = `
<span
  className="bpk-text bpk-text--xxxxxl bpk-text--black"
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</span>
`;

exports[`BpkText should render correctly with weight="bold" 1`] = `
<span
  className="bpk-text bpk-text--base bpk-text--bold"
>
  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
</span>
`;
